# KDE-Desktop-Effect-Template

./: CMakeLists.txt  README.md  generate_metadata.cmake  metadata.json.in
src/: CMakeLists.txt  customization.h  metadata.json  options.kcfg  plugin.cpp  template_effect.cpp  template_effect.h  template_effect_config.kcfgc
